--- a/packages/aws-amplify/package.json
+++ b/packages/aws-amplify/package.json
@@ -41,7 +41,7 @@
     "ts-jest": "^20.0.10",
     "tslint": "^5.7.0",
     "tslint-config-airbnb": "^5.3.0",
-    "typedoc": "^0.9.0",
+    "typedoc-dep-update": "^0.9.0",
     "typescript": "^2.4.2",
     "typescript-formatter": "^6.0.0",
     "uglifyjs-webpack-plugin": "^0.4.6",
